--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,9 @@ aside{
 .main-content{
     padding-top: 120px;
     width: 95%;
+    height: 100%;
     margin: auto;
-    background-color: pink;
+    overflow-y: auto;
 }
 
 .main-content-nav ul{
@@ -167,10 +168,95 @@ aside{
     display: inline;
 } */
 
+/* ALBUMS */
+.albums{
+    margin: 40px 0;
+}
+
+.albums-section{
+    margin: 20px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.album-content{
+    width: calc((100% / 6) - 20px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.album-content h4{
+    margin: 15px 0 7px;
+    color: white;
+}
+
+.album-content span{
+    color: #656565;
+    font-weight: bold;
+}
+
+.album-content img{
+    width: 100%;
+}
+
+/* SUGGESTED-ALBUMS / ARTIST */
+.suggested-albums .albums-section,
+.artist .albums-section{
+    justify-content: normal;
+}
+
+.suggested-albums .albums-section .album-content:first-child,
+.artist .albums-section .album-content:first-child{
+    margin-right: 25px;
+}
+
+/* ARTIST */
+.artist .albums-section .album-content img{
+    border-radius: 50%;
+}
+
 
 /* FOOTER */
 footer{
     width: 100%;
     height: 100px;
     background-color: #282828;
+    display: flex;
+    flex-direction: row;
+}
+
+.selected-album{
+    display: flex;
+    justify-self: flex-start;
+    flex-direction: row;
+    margin: 0 20px;
+    width: 15%;
+
+
+
+    background-color: pink;
+}
+
+.album-name-like{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 70%;
+}
+
+.album-name-like img{
+    width: 60px;
+}
+
+.like-share-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 30%;
+    font-size: 20px;
 }
