Footer Sezione Centrale

--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,7 @@ footer{
     flex-direction: row;
 }
 
+/* SELECT-ALBUM-SECTION */
 .selected-album{
     display: flex;
     justify-self: flex-start;
@@ -235,9 +236,6 @@ footer{
     margin: 0 20px;
     width: 15%;
 
-
-
-    background-color: pink;
 }
 
 .album-name-like{
@@ -259,4 +257,21 @@ footer{
     align-items: center;
     width: 30%;
     font-size: 20px;
+}
+
+/* PLAY-SECTION */
+.play-section{
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+
+.play-section-btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
