--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,34 @@ aside{
     width: 100%;
 }
 
+.image{
+    width: 100%;
+    height: 70%;
+    position: relative;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: crimson;
+}
+
+.image:hover{
+    filter: opacity(0.5);
+}
+
+.overlay-btn{
+    color: white;
+    font-size: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 @media screen and (max-width: 1099px) {
     .albums-section{
         justify-content: flex-start;
@@ -366,7 +394,7 @@ footer{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 30%;
+    width: 50%;
 }
 
 .play-section-btn a{
@@ -381,6 +409,7 @@ footer{
 .time-audio{
     display: flex;
     align-items: center;
+    width: 65%;
 }
 
 .full-line{
@@ -408,9 +437,8 @@ footer{
 }
 
 .full-line-audio{
-    width: 175px;
+    width: 60%;
     height: 5px;
-    /* margin: 0 40px; */
     background-color: #656565;
     border-radius: 20px;
 }
