--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,19 @@ aside{
     height: 100px;
     color: #d2d2d2;
 }
+
+#line-menu-row{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.line-menu{
+    width: 2px;
+    height: 10px;
+    background-color: #abfc2f;
+}
+
 .menu-home-search{
     margin-bottom: 30px;
 }
@@ -203,16 +216,12 @@ aside{
     font-size: 15px;
 }
 
-/* .main-content-nav li a p{
-    width: 10px;
-    height: 1px;
-    border-bottom: 1px solid greenyellow;
-    display: none;
+.line-nav{
+    width: 30%;
+    height: 2px;
+    background-color: #abfc2f;
+    margin: 3px 0;
 }
-
-.main-content-nav li a p:hover{
-    display: inline;
-} */
 
 /* ALBUMS */
 .albums{
@@ -255,25 +264,37 @@ aside{
 }
 
 .overlay{
+    display: none;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: crimson;
-}
-
-.image:hover{
-    filter: opacity(0.5);
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .overlay-btn{
-    color: white;
-    font-size: 20px;
+    display: none;
+    position: absolute;
     top: 50%;
     left: 50%;
+    color: white;
+    z-index: 2;
     transform: translate(-50%, -50%);
-    text-align: center;
+    font-size: 30px;
+}
+
+.image:hover .overlay{
+    display: block;
+    position: absolute;
+    z-index: 1;
+}
+
+.image:hover .overlay .overlay-btn{
+    display: block;
+    position: absolute;
+    z-index: 2;
 }
 
 @media screen and (max-width: 1099px) {
