--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,14 @@ aside{
     margin: 0;
 }
 
-.logo img{
+.logo img:first-child{
     width: 65%;
     height: 100px;
     color: #d2d2d2;
+}
+
+.second-icon{
+    display: none;
 }
 
 #line-menu-row{
@@ -66,9 +70,10 @@ aside{
 }
 
 .line-menu{
-    width: 2px;
-    height: 10px;
+    width: 3px;
+    height: 40px;
     background-color: #abfc2f;
+    margin: 0 -3px;
 }
 
 .menu-home-search{
@@ -137,6 +142,19 @@ aside{
     aside{
         width: 50px;
     }
+
+    .logo{
+        height: auto;
+    }
+
+    .logo img:first-child{
+        display: none;
+    }
+
+    .second-icon{
+        display: inline;
+        filter: invert(1);
+    }
     
     .nav span, .bookshelf, .line{
         display: none;
@@ -175,6 +193,7 @@ aside{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    z-index: 4;
 }
 
 .upgrade-btn a{
@@ -203,6 +222,7 @@ aside{
 .main-content-nav ul{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .main-content-nav li{
@@ -229,7 +249,7 @@ aside{
 }
 
 .albums-section{
-    margin: 20px 0;
+    margin: 40px 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -237,6 +257,7 @@ aside{
 
 .album-content{
     width: calc((100% / 6) - 20px);
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -259,7 +280,7 @@ aside{
 
 .image{
     width: 100%;
-    height: 70%;
+    height: 100%;
     position: relative;
 }
 
@@ -282,7 +303,7 @@ aside{
     color: white;
     z-index: 2;
     transform: translate(-50%, -50%);
-    font-size: 30px;
+    font-size: 80px;
 }
 
 .image:hover .overlay{
@@ -338,6 +359,10 @@ aside{
 }
 
 /* SUGGESTED-ALBUMS / ARTIST */
+.suggested-albums h2, .artist h2{
+    margin: 20px 0;
+}
+
 .suggested-albums .albums-section,
 .artist .albums-section{
     justify-content: normal;
@@ -350,6 +375,10 @@ aside{
 
 /* ARTIST */
 .artist .albums-section .album-content img{
+    border-radius: 50%;
+}
+
+.borderradius-overlay{
     border-radius: 50%;
 }
 
@@ -371,7 +400,6 @@ footer{
     flex-direction: row;
     margin: 0 20px;
     width: 15%;
-
 }
 
 .album-name-like{
